[package]
name = "rust-tokio-example-2"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"

[[bin]]
name = "hello-redis"
path = "src/examples/hello-redis.rs"

[[bin]]
name = "task_spawn_test"
path = "src/utils/task_spawn_test.rs"